Big JUnit 4 commit
1) Converted all of "common" to use junit 4
2) Converted all the subclasses of AbstractClientServerTest to use junit 4
3) Converted all the subclasses of CXFAbstractTest to use junit 4
4) Converted all the system tests to use junit 4
5) Converted all the jms tests to use junit 4
6) Converted some of the ws tests to junit 4.

Also:
1) Re-enable PMD for aegis databinding
2) Fix over 700 checkstyle errors in aegis databinding (~60 left)
3) Deploy test jars for system tests
4) Move some "common" classes from systests to testutils




git-svn-id: https://svn.apache.org/repos/asf/incubator/cxf/trunk@516103 13f79535-47bb-0310-9956-ffa450edef68